testsuite/tests/parse-errors/unclosed_paren_module_expr2.ml
(* TEST
 setup-travlangc.byte-build-env;
 travlangc_byte_exit_status = "2";
 travlangc.byte;
 check-travlangc.byte-output;
*)

module M = (struct end
